# learning-cpp-23

./: README.md
Modern-Section-10-exceptions/: our_string.cpp  our_string.h  rethrow.cpp  simple.cpp  string_main.cpp
Modern-Section-11-move/: move-only.cpp  move-operators.cpp  moves.cpp  our_string.cpp  our_string.h  our_string_broken.cpp  our_string_broken.h  practical.cpp  string_main.cpp
Modern-Section-12-smart-ptrs/: String.cpp  String.h  date.cpp  date.h  date_impl.cpp  date_impl.h  date_main.cpp  shapes.h  smart.cpp  string_main.cpp  unique_ptr.cpp  weak_ptr.cpp  weak_ptr2.cpp  weak_ptr3.cpp
Modern-Section-13-misc/: ass_print.c  assignment1.cpp  bind.cpp  bitsets.cpp  chrono-clocks.cpp  chrono1.cpp  maths.cpp  multiple.cpp  rtti.cpp  run_ass  tuples.cpp  unions.cpp  virtual.cpp
Modern-Section-14-constexpr-templating/: constexpr.cpp  constexpr_if.cpp  specialisation.cpp  traits.cpp  variadic.cpp
Modern-Section-2-Basics/: casts.cpp  cell.cpp  cell.h  grid.cpp  grid.h  if_and_switch_17.cpp  iterators.cpp  life.cpp  life.h  literals.cpp  pointers.cpp  url.cpp  vector-init.cpp
Modern-Section-3-Strings/: exclaim.cpp  strings.cpp
Modern-Section-4-Streams/: assignment1.cpp  assignment2.cpp  binary_files.cpp  bitmap.cpp  bitmap.h  streams.cpp  test.txt  (+1 more)
Modern-sfml-project/: CMakeLists.txt  background.cpp  background.h  ball.cpp  ball.h  breakout.cpp  brick.cpp  brick.h  constants.h  creature.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  first.cpp  game.cpp  game.h  interactions.cpp  interactions.h  paddle.cpp  paddle.h  random_walk.cpp
(+104 files in other folders)
